--- a/p5js/02-shake/index.html
+++ b/p5js/02-shake/index.html
@@ -2,13 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="../p5.js"></script>
-	<!--<script language="javascript" src="../addons/p5.dom.js"></script>-->
-  <!--<script language="javascript" src="../addons/p5.sound.js"></script>-->
+  <script language="javascript" type="text/javascript" src="../pushpop.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
-
 <body>
 </body>
 </html>
