--- a/p5js/02-sketch-client-receive-shake/index.html
+++ b/p5js/02-sketch-client-receive-shake/index.html
@@ -2,7 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <script language="javascript" type="text/javascript" src="../p5.js"></script>
-  <script language="javascript" type="text/javascript" src="../pushpop.js"></script>
+  <script language="javascript" type="text/javascript" src="../libs/pushpop.js"></script>
+  <script language="javascript" type="text/javascript" src="../libs/shake.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <style> body {padding: 0; margin: 0;} </style>
 </head>
